# VitalSign

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  INSTALL.md  LICENSE  QUICK_START.md  README.md  USAGE_EXAMPLES.md  VitalSign.spec  WINDOWS_INSTALLATION.md  requirements.txt
docs/: CPP_DOCUMENTATION.md  GUI_DOCUMENTATION.md  GUI_UTILS_DOCUMENTATION.md  LOCALIZATION_DOCUMENTATION.md  SETTINGS_DOCUMENTATION.md  build_instructions.md
helpers/: README.md
helpers/cpp/: README.md  config_manager.cpp  config_manager.h  cpu_rater.cpp  cpu_rater.h  gpu_rater.cpp  gpu_rater.h  keyboard_analyzer.cpp  keyboard_analyzer.h  monitor_analyzer.cpp  monitor_analyzer.h
helpers/python/: README.md  __init__.py  config_manager.py  web_helper.py
main/: README.md
main/cpp/: CMakeLists.txt  fps_lib.cpp  fps_lib.h  hardware_analyzer.cpp  hardware_analyzer.h  system_info_lib.cpp  system_info_lib.h  system_info_lib_pybind.cpp  system_lib.cpp  system_lib.h
main/linux/: README.md  __init__.py  device_analyzer.cpp  device_analyzer.h  device_analyzer.py  distro_analyzer.py  gpu_monitor.py  hardware_rater.py  (+5 more)
scripts/: build.bat  build.sh  build_appimage.sh  build_deb.sh  build_exe.bat  build_system_info.bat  build_system_info.sh  run.sh  run_discord_overlay.bat  run_discord_overlay.sh  run_gui.bat  run_gui.sh  run_gui_advanced.bat  run_gui_advanced.sh  run_overlay.bat  run_overlay.sh
ui/cpp/: CMakeLists.txt  fps_monitor.cpp  system_monitor.cpp
ui/cpp/python/: __init__.py  system_lib.py
utils/: __init__.py  console_utils.py  fire_animation.py  format_utils.py  gui_utils.py  translator.py
(+9 files in other folders)
